# pkthere

./: .dockerignore  .gitignore  .prettierignore  .taplo.toml  Cargo.toml  Cross.toml  README.md  build.rs  compose.yaml  pyproject.toml
.cargo/: config.toml
.github/scripts/: ci_test_runner.py  grant_raw_capability.sh
.github/workflows/: rust.yml
build_support/: icmp_probe.rs
crates/socket_policy/: Cargo.toml
crates/wire/: Cargo.toml
docker/: __init__.py
docker/alpine/: Dockerfile  __init__.py  ci.py  harness.py  portable_build.py  topology.env
docker/rust_build/: Dockerfile
src/: cli.rs  cli_tests.rs  diagnostics.rs  endpoint.rs  flow_claim.rs  flow_key.rs  flow_state.rs  logging.rs  main.rs  net.rs  packet_trace.rs  recv_buf.rs  runtime_support.rs  stats.rs  stats_support.rs  worker.rs  worker_support.rs
src/net/: byte_order.rs  checksum.rs  framing_shim.rs  icmp_echo_parse.rs  icmp_parse.rs  icmp_sequence.rs  icmp_support.rs  managed_socket.rs  mod.rs  packet_headers.rs  packet_headers_tests.rs  params.rs  payload.rs  payload_send.rs  payload_support.rs  payload_tests.rs  session.rs  sock_mgr.rs  socket.rs  socket_errors.rs  socket_policy.rs  socket_tests.rs  sync_icmp.rs
src/worker_support/: cache.rs  client.rs  client_dispatch.rs  client_lock.rs  context.rs  dispatch.rs  handshake_trace.rs  lifecycle.rs  mod.rs  pacing.rs  packet_admission.rs  packet_admission_tests.rs  packet_dump.rs  receive.rs  socket_io.rs  sync_buffer.rs  test_support.rs  upstream.rs  upstream_ack.rs
tests/: cli.rs  common.rs  icmp_integration.rs  integration.rs  lifecycle_integration.rs  policy.rs  socket_reality.rs  stress.rs  worker_modes.rs
tests/common/: app_bin.rs  child_guard.rs  cli.rs  core.rs  forwarder.rs  harness_policy.rs  integration.rs  matrix.rs  network.rs  orchestrator.rs  path_naming_policy.rs  path_policy.rs  policy.rs  policy_tests.rs  portable_policy.rs  raw_icmp.rs  runtime_asserts.rs  (+7 more)
tests/support/: Cargo.toml
tests/support/src/: app_bin.rs  cli.rs  fixtures.rs  forwarder.rs  icmp_wildcard_cases.rs  lib.rs  managed_child.rs  matrix.rs  network.rs  packet_diagnostics.rs  raw_icmp.rs  runtime_asserts.rs  runtime_capability.rs  runtime_io.rs  socket_matrix.rs  test_paths.rs  timing.rs  user_policy.rs  worker_flow.rs
tests/support/src/managed_child/: capture.rs
tests/support/src/socket_reality/: case.rs  diagnostic.rs  evidence.rs  mod.rs  names.rs  policy_snapshot.rs  requirement.rs  witness.rs
tests/support/src/socket_reality/collect/: direct.rs  dispatch.rs  forwarder.rs  mod.rs
tests/support/src/socket_reality/verify/: availability.rs  creation.rs  implementation.rs  lifecycle.rs  mod.rs  model.rs  raw.rs  reuse_port.rs  tests.rs
tests/support/tests/: managed_child.rs
(+52 files in other folders)
