[package]
name = "pkthere"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = 0

[build-dependencies]
socket2 = { version = "0.6.3", features = ["all"] }
windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinSock"] }

[dependencies]
bytemuck = { version = "1.25.0", features = ["must_cast"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
libc = "0.2.185"
nix = { version = "0.31.2", features = ["user"] }
serde_json = "1.0.149"
socket2 = { version = "0.6.3", features = ["all"] }
wide = { version = "1.3.0", features = ["serde"] }
windows-sys = { version = "0.61.2", features = ["Win32_Networking_WinSock"] }
